--- a/src/components/AuthNav/AuthNav.module.css
+++ b/src/components/AuthNav/AuthNav.module.css
@@ -1,3 +1,11 @@
+.listAuth {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  font-size: 23px;
+}
+
 .link {
   display: inline-block;
   text-decoration: none;
@@ -5,6 +13,15 @@
   font-weight: 700;
   color: #2a363b;
 }
+
+.link:hover,
+.link:focus {
+  text-decoration-line: underline;
+}
 .activeLink {
   color: #e84a5f;
+}
+
+.ItemAuth {
+  margin-right: 40px;
 }
