--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -5,10 +5,11 @@
   min-height: 80px;
   padding-left: 30px;
   padding-right: 30px;
-  border-bottom: 1px solid #ccc;
+  /* border-bottom: 1px solid #ccc; */
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   position: absolute;
   top: 0%;
   right: 0px;
   left: 0px;
+  color: #3f51b5;
 }
