--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -17,7 +17,7 @@
 }
 .input:focus,
 :hover {
-  border-color: #008cba;
+  border-color: #3f51b5;
 }
 .input:focus {
   outline: none;
@@ -37,13 +37,13 @@
   padding: 5px 20px;
   text-align: center;
   text-decoration: none;
-  background-color: #008cba;
+  background-color: #3f51b5;
   font-size: 22px;
   border-radius: 4px;
   margin: 30px 0px;
 }
 .button:hover,
 :focus {
-  color: #008cba;
+  color: #3f51b5;
   background-color: white;
 }
