--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 html {
   box-sizing: border-box;
   width: 100vw;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 *,
@@ -11,6 +11,7 @@ html {
 }
 body {
   font-family: 'Roboto';
+  letter-spacing: 0.02em;
   background-color: rgb(245, 235, 204);
 }
 /* body {
