--- a/src/views/Views.module.css
+++ b/src/views/Views.module.css
@@ -1,10 +1,12 @@
 .HomeContainer {
-  background: url('images/sunset-london-england.jpg') no-repeat center center
-    fixed;
+  background: linear-gradient(rgba(47, 48, 58, 0.3), rgba(47, 48, 58, 0.3)),
+    url('images/sunset-london-england.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  /* background-position: left top; */
+  background-attachment: fixed;
 
   display: flex;
   align-items: center;
@@ -14,4 +16,54 @@
   height: 100vh;
 
   color: #ffffff;
+}
+
+.ContactsContainer {
+  background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url('images/telefonnaya-budka-kniga-makro.jpg') no-repeat center center
+      fixed;
+
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
+  width: 100vw;
+  height: 100vh;
+
+  display: flex;
+}
+
+.LoginContainer {
+  background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url('images/telefonnaya-budka-pticy.jpg') no-repeat center center fixed;
+
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
+  width: 100vw;
+  height: 100vh;
+}
+
+.RegisterContainer {
+  background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url('images/telefonnaya-budka-pticy.jpg') no-repeat center center fixed;
+
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
+  width: 100vw;
+  height: 100vh;
+}
+
+.LoginSection {
+  padding: 40vh 15vw;
+}
+
+.RegisterSection {
+  padding: 30vh 65vw;
 }
