--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -2,8 +2,8 @@
   padding: 5px 20px;
   display: flex;
   flex-direction: column;
-  text-align: start;
-  border: solid 1px black;
+  text-align: center;
+  /* border: solid 1px black; */
 }
 
 .input {
@@ -31,16 +31,17 @@
 
 .button {
   cursor: pointer;
-  max-width: 200px;
+  max-width: 300px;
   border: none;
   color: white;
-  padding: 5px 20px;
-  text-align: center;
+  padding: 5px 90px;
   text-decoration: none;
   background-color: #3f51b5;
   font-size: 22px;
   border-radius: 4px;
-  margin: 30px 0px;
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .button:hover,
 :focus {
