--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,11 +1,12 @@
 .container {
   width: 1200px;
   padding-top: 0px;
-
-  margin: 120px auto;
-  width: 450px;
+  padding-right: 20px;
+  margin: 120px auto 10px;
+  width: 580px;
   color: rgb(255, 255, 255);
   text-align: center;
+  overflow: auto;
 }
 .title {
   font-size: 38px;
