--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,9 +1,9 @@
 .container {
-  width: 1200px;
+  max-width: 1200px;
   padding-top: 0px;
-  padding-right: 20px;
+  margin-right: 20px;
   margin: 120px auto 10px;
-  width: 580px;
+  max-width: 580px;
   color: rgb(255, 255, 255);
   text-align: center;
   overflow: auto;
