--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -1,22 +1,16 @@
-.label {
-  padding: 5px 20px;
-}
-
 .span {
   display: block;
   font-size: 25px;
-  margin-left: 5px;
   padding-bottom: 20px;
 }
 
 .input {
   height: 30px;
-  margin-left: 5px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding-left: 25px;
   cursor: pointer;
-  width: 300px;
+  max-width: 300px;
   font-size: 20px;
 }
 .input:focus,
