--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -3,28 +3,28 @@
   padding: 0;
   margin: 0;
   list-style: none;
-  font-size: 23px;
 }
-
 .link {
   display: inline-block;
   text-decoration: none;
   padding: 12;
   font-weight: 700;
   color: #3f51b5;
-  /* color: #2a363b; */
 }
-
 .link:hover,
 .link:focus {
   text-decoration-line: underline;
   background-color: inherit;
 }
-
 .activeLink {
   color: #e84a5f;
 }
-
 .ItemNav {
-  margin-right: 40px;
+  margin-right: 10px;
+}
+
+@media screen and (min-width: 720px) {
+  .ItemNav {
+    margin-right: 40px;
+  }
 }
