--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -5,10 +5,19 @@
 }
 .avatar {
   margin-right: 4;
+  width: 37px;
 }
 .name {
-  font-size: 23px;
+  font-size: 10px;
   font-weight: 700;
   margin-right: 12px;
   margin-left: 12px;
+}
+@media screen and (min-width: 720px) {
+  .name {
+    font-size: 23px;
+  }
+  .avatar {
+    width: 57px;
+  }
 }
